update src to DSpace 1.7.1 merge --depth=infinity --ignore-ancestry https://svn.lib.umd.edu/drum/tags/dspace-1.6.2@HEAD https://svn.lib.umd.edu/drum/tags/dspace-1.7.1@HEAD /apps/drum/src     --- Merging differences between repository URLs into /apps/drum/src
[SNIP]
        Merge complete.
    ===== File Statistics: =====
    Deleted: 42
    Added: 292
    Updated: 1144
    ==== Property Statistics: =====
    Updated: 1
    ==== Conflict Statistics: =====
    File conflicts: 16
    Tree conflicts: 25
    
    
    MM      src/dspace/docs/pdf/DSpace-Manual.pdf
      C src/dspace/bin/export
      >   local edit, incoming delete upon merge
      C src/dspace/bin/create-administrator
      >   local edit, incoming delete upon merge
      C src/dspace/bin/structure-builder
      >   local edit, incoming delete upon merge
      C src/dspace/bin/stat-general
      >   local edit, incoming delete upon merge
      C src/dspace/bin/index-update
      >   local edit, incoming delete upon merge
      C src/dspace/bin/stat-report-general
      >   local edit, incoming delete upon merge
      C src/dspace/bin/stat-initial
      >   local edit, incoming delete upon merge
      C src/dspace/bin/checker
      >   local edit, incoming delete upon merge
      C src/dspace/bin/update-handle-prefix
      >   local edit, incoming delete upon merge
      C src/dspace/bin/index-init
      >   local edit, incoming delete upon merge
      C src/dspace/bin/stat-report-initial
      >   local edit, incoming delete upon merge
      C src/dspace/bin/packager
      >   local edit, incoming delete upon merge
      C src/dspace/bin/generate-sitemaps
      >   local edit, incoming delete upon merge
      C src/dspace/bin/cleanup
      >   local edit, incoming delete upon merge
      C src/dspace/bin/sub-daily
      >   local edit, incoming delete upon merge
      C src/dspace/bin/dsrun
      >   local edit, incoming delete upon merge
      C src/dspace/bin/dsrun.bat
      >   local edit, incoming del