@@ -1,39 +1,9 @@
-/*
- * RegistryLoader.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 4660 $
- *
- * Date: $Date: 2010-01-06 20:57:33 -0500 (Wed, 06 Jan 2010) $
- *
- * Copyright (c) 2002-2009, The DSpace Foundation.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the DSpace Foundation nor the names of its
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.administer;
 
@@ -71,7 +41,7 @@ import org.xml.sax.SAXException;
  * <code>RegistryLoader -dc dc-types.xml</code>
  * 
  * @author Robert Tansley
- * @version $Revision: 4660 $
+ * @version $Revision: 5844 $
  */
 public class RegistryLoader
 {
@@ -194,7 +164,7 @@ public class RegistryLoader
         int supportLevel = Integer.parseInt(supportLevelString);
 
         String internalString = getElementData(node, "internal");
-        boolean internal = new Boolean(internalString).booleanValue();
+        boolean internal = Boolean.valueOf(internalString).booleanValue();
 
         String[] extensions = getRepeatedElementData(node, "extension");
 
@@ -229,11 +199,22 @@ public class RegistryLoader
     {
         Document document = loadXML(filename);
 
-        // Get the nodes corresponding to formats
+        // Get the nodes corresponding to schemas
+        NodeList schemaNodes = XPathAPI.selectNodeList(document,
+                "/dspace-dc-types/dc-schema");
+
+        // Add each schema
+        for (int i = 0; i < schemaNodes.getLength(); i++)
+        {
+            Node n = schemaNodes.item(i);
+            loadMDSchema(context, n);
+        }
+        
+        // Get the nodes corresponding to fields
         NodeList typeNodes = XPathAPI.selectNodeList(document,
                 "/dspace-dc-types/dc-type");
 
-        // Add each one as a new format to the registry
+        // Add each one as a new field to the schema
         for (int i = 0; i < typeNodes.getLength(); i++)
         {
             Node n = typeNodes.item(i);
@@ -244,6 +225,32 @@ public class RegistryLoader
                 "number_loaded=" + typeNodes.getLength()));
     }
 
+    /**
+     * Load Dublin Core Schemas
+     * 
+     * @param context
+     * @param node
+     */
+    private static void loadMDSchema(Context context, Node node) 
+    		throws TransformerException, SQLException, AuthorizeException, 
+    		NonUniqueMetadataException
+    {
+    	// Get the values
+        String shortname = getElementData(node, "name");
+        String namespace = getElementData(node, "namespace");
+
+        // Check if the schema exists already
+        MetadataSchema schema = MetadataSchema.find(context, shortname);
+        if (schema == null)
+        {
+        	// If not create it.
+        	schema = new MetadataSchema();
+        	schema.setNamespace(namespace);
+        	schema.setName(shortname);
+        	schema.create(context);
+        }
+    }
+    
     /**
      * Process a node in the bitstream format registry XML file. The node must
      * be a "bitstream-type" node
