@@ -1,33 +1,9 @@
-/*
- * Copyright (c) 2002-2009, The DSpace Foundation.  All rights reserved.
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the DSpace Foundation nor the names of its
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.checker;
 
@@ -66,7 +42,7 @@ import org.dspace.core.Utils;
  * @author Grace Carpenter
  * @author Nathan Sarr
  */
-public class ChecksumChecker
+public final class ChecksumChecker
 {
     private static final Logger LOG = Logger.getLogger(ChecksumChecker.class);
 
@@ -77,7 +53,6 @@ public class ChecksumChecker
      */
     private ChecksumChecker()
     {
-        ;
     }
 
     /**
@@ -164,7 +139,7 @@ public class ChecksumChecker
             }
             catch (FileNotFoundException e)
             {
-                e.printStackTrace();
+                LOG.error("File not found", e);
                 System.exit(1);
             }
             int count = rp.prune();
@@ -190,13 +165,13 @@ public class ChecksumChecker
         {
             // check only specified bitstream(s)
             String[] ids = line.getOptionValues('b');
-            List idList = new ArrayList(ids.length);
+            List<Integer> idList = new ArrayList<Integer>(ids.length);
 
             for (int i = 0; i < ids.length; i++)
             {
                 try
                 {
-                    idList.add(new Integer(ids[i]));
+                    idList.add(Integer.valueOf(ids[i]));
                 }
                 catch (NumberFormatException nfe)
                 {
@@ -232,7 +207,7 @@ public class ChecksumChecker
         }
         else if (line.hasOption('c'))
         {
-        	int count = new Integer(line.getOptionValue('c')).intValue();
+        	int count = Integer.valueOf(line.getOptionValue('c')).intValue();
             
         	// run checker process for specified number of bitstreams
             dispatcher = new LimitedCountDispatcher(new SimpleDispatcher(
