@@ -1,35 +1,9 @@
-/*
- * IndexBrowse.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Copyright (c) 2002-2009, The DSpace Foundation.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the DSpace Foundation nor the names of its
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.browse;
 
@@ -295,12 +269,6 @@ public class IndexBrowse
     	return this.outFile;
     }
     
-    private void removeIndex(int itemID, String table)
-        throws BrowseException
-    {
-        dao.deleteByItemID(table, itemID);
-    }
-
     /**
      * Prune indexes - called from the public interfaces or at the end of a batch indexing process
      */
@@ -312,13 +280,18 @@ public class IndexBrowse
             if (bis[i].isMetadataIndex())
             {
                 log.debug("Pruning metadata index: " + bis[i].getTableName());
-                dao.pruneExcess(bis[i].getTableName(), bis[i].getMapTableName(), false);
-                dao.pruneDistinct(bis[i].getDistinctTableName(), bis[i].getMapTableName());
+                pruneDistinctIndex(bis[i], null);
             }
         }
 
-        dao.pruneExcess(BrowseIndex.getItemBrowseIndex().getTableName(), null, false);
-        dao.pruneExcess(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), null, true);
+        dao.pruneExcess(BrowseIndex.getItemBrowseIndex().getTableName(), false);
+        dao.pruneExcess(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), true);
+    }
+
+    private void pruneDistinctIndex(BrowseIndex bi, List<Integer> removedIds) throws BrowseException
+    {
+        dao.pruneMapExcess(bi.getMapTableName(), false, removedIds);
+        dao.pruneDistinct(bi.getDistinctTableName(), bi.getMapTableName(), removedIds);
     }
 
     /**
@@ -327,8 +300,12 @@ public class IndexBrowse
      * @param item	the item to index
      * @throws BrowseException
      */
-    public void indexItem(Item item)
-    	throws BrowseException
+    public void indexItem(Item item) throws BrowseException
+    {
+        indexItem(item, false);
+    }
+
+    void indexItem(Item item, boolean addingNewItem) throws BrowseException
     {
         // If the item is not archived AND has not been withdrawn
         // we can assume that it has *never* been archived - in that case,
@@ -339,12 +316,13 @@ public class IndexBrowse
         // isWithdrawn() as FALSE, may result in stale data in the browse tables.
         // Such an update should never occur though, and if it does, probably indicates a major
         // problem with the code updating the Item.
-        if (item.isArchived() || item.isWithdrawn())
+        if (item.isArchived())
         {
-            indexItem(new ItemMetadataProxy(item));
-
-            // Ensure that we remove any invalid entries
-            pruneIndexes();
+            indexItem(new ItemMetadataProxy(item), addingNewItem);
+        }
+        else if (item.isWithdrawn())
+        {
+            indexItem(new ItemMetadataProxy(item), false);
         }
     }
     
@@ -354,7 +332,7 @@ public class IndexBrowse
          * @param item  the item to index
          * @throws BrowseException
          */
-    private void indexItem(ItemMetadataProxy item)
+    private void indexItem(ItemMetadataProxy item, boolean addingNewItem)
         throws BrowseException
     {
         // Map to store the metadata from the Item
@@ -372,7 +350,7 @@ public class IndexBrowse
                 {
                     // Record doesn't exist - ensure that it doesn't exist in the withdrawn index,
                     // and add it to the archived item index
-                    removeIndex(item.getID(), BrowseIndex.getWithdrawnBrowseIndex().getTableName());
+                    dao.deleteByItemID(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), item.getID());
                     dao.insertIndex(BrowseIndex.getItemBrowseIndex().getTableName(), item.getID(), sortMap);
                 }
 
@@ -385,15 +363,15 @@ public class IndexBrowse
                 {
                     // Record doesn't exist - ensure that it doesn't exist in the item index,
                     // and add it to the withdrawn item index
-                    removeIndex(item.getID(), BrowseIndex.getItemBrowseIndex().getTableName());
+                    dao.deleteByItemID(BrowseIndex.getItemBrowseIndex().getTableName(), item.getID());
                     dao.insertIndex(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), item.getID(), sortMap);
                 }
             }
             else
             {
                 // This item shouldn't exist in either index - ensure that it is removed
-                removeIndex(item.getID(), BrowseIndex.getItemBrowseIndex().getTableName());
-                removeIndex(item.getID(), BrowseIndex.getWithdrawnBrowseIndex().getTableName());
+                dao.deleteByItemID(BrowseIndex.getItemBrowseIndex().getTableName(), item.getID());
+                dao.deleteByItemID(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), item.getID());
             }
 
             // Update the community mappings if they are required, or remove them if they aren't
@@ -409,10 +387,9 @@ public class IndexBrowse
             // Now update the metadata indexes
             for (int i = 0; i < bis.length; i++)
             {
-                log.debug("Indexing for item " + item.getID() + ", for index: " + bis[i].getTableName());
-                
                 if (bis[i].isMetadataIndex())
                 {
+                    log.debug("Indexing for item " + item.getID() + ", for index: " + bis[i].getTableName());
                     Set<Integer> distIDSet = new HashSet<Integer>();
 
                     // now index the new details - but only if it's archived and not withdrawn
@@ -430,82 +407,93 @@ public class IndexBrowse
                                 int minConfidence = MetadataAuthorityManager.getManager()
                                         .getMinConfidence(values[0].schema, values[0].element, values[0].qualifier);
 
-                                for (int x = 0; x < values.length; x++)
+                                for (DCValue value : values)
                                 {
                                     // Ensure that there is a value to index before inserting it
-                                    if (StringUtils.isEmpty(values[x].value))
+                                    if (StringUtils.isEmpty(value.value))
                                     {
                                         log.error("Null metadata value for item " + item.getID() + ", field: " +
-                                                values[x].schema + "." +
-                                                values[x].element +
-                                                (values[x].qualifier == null ? "" : "." + values[x].qualifier));
+                                                value.schema + "." +
+                                                value.element +
+                                                (value.qualifier == null ? "" : "." + value.qualifier));
                                     }
                                     else
-                                    {                                        
-                                        if (bis[i].isAuthorityIndex() && 
-                                                (values[x].authority == null || values[x].confidence < minConfidence))
+                                    {
+                                        if (bis[i].isAuthorityIndex() &&
+                                                (value.authority == null || value.confidence < minConfidence))
                                         {
-                                            // if we have an authority index only authored metadata will go here!
-                                            log.debug("Skipping item="+item.getID()+", field="+values[x].schema+"."+values[x].element+"."+values[x].qualifier+", value="+values[x].value+", authority="+values[x].authority+", confidence="+values[x].confidence+" (BAD AUTHORITY)");
-                                            break;
+                                            // skip to next value in this authority field if value is not authoritative
+                                            log.debug("Skipping non-authoritative value: " + item.getID() + ", field=" + value.schema + "." + value.element + "." + value.qualifier + ", value=" + value.value + ", authority=" + value.authority + ", confidence=" + value.confidence + " (BAD AUTHORITY)");
+                                            continue;
+
                                         }
-                                        
+
                                         // is there any valid (with appropriate confidence) authority key?
-                                        if (values[x].authority != null
-                                                && values[x].confidence >= minConfidence)
+                                        if (value.authority != null
+                                                && value.confidence >= minConfidence)
                                         {
-                                            boolean isValueVariants = false;
+                                            boolean isValueInVariants = false;
+
+                                            // Are there variants of this value
                                             List<String> variants = ChoiceAuthorityManager.getManager()
-                                                                        .getVariants(values[x].schema, values[x].element, values[x].qualifier,
-                                                                                        values[x].authority, values[x].language);
+                                                    .getVariants(value.schema, value.element, value.qualifier,
+                                                            value.authority, value.language);
+
+                                            // If we have variants, index them
                                             if (variants != null)
                                             {
                                                 for (String var : variants)
                                                 {
-                                                    String nVal = OrderFormat.makeSortString(var, values[x].language, bis[i].getDataType());
-                                                    distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), var, values[x].authority, nVal));
-                                                    if (var.equals(values[x].value))
+                                                    String nVal = OrderFormat.makeSortString(var, value.language, bis[i].getDataType());
+                                                    distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), var, value.authority, nVal));
+                                                    if (var.equals(value.value))
                                                     {
-                                                        isValueVariants = true;
+                                                        isValueInVariants = true;
                                                     }
                                                 }
                                             }
 
-                                            if (!isValueVariants)
+                                            // If we didn't index the value as one of the variants, add it now
+                                            if (!isValueInVariants)
                                             {
                                                 // get the normalised version of the value
-                                                String nVal = OrderFormat.makeSortString(values[x].value, values[x].language, bis[i].getDataType());
-                                                distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), values[x].value, values[x].authority, nVal));
+                                                String nVal = OrderFormat.makeSortString(value.value, value.language, bis[i].getDataType());
+                                                distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), value.value, value.authority, nVal));
                                             }
                                         }
                                         else // put it in the browse index as if it hasn't have an authority key
                                         {
-                                        // get the normalised version of the value
-                                        String nVal = OrderFormat.makeSortString(values[x].value, values[x].language, bis[i].getDataType());
-                                            distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), values[x].value, null, nVal));
+                                            // get the normalised version of the value
+                                            String nVal = OrderFormat.makeSortString(value.value, value.language, bis[i].getDataType());
+                                            distIDSet.add(dao.getDistinctID(bis[i].getDistinctTableName(), value.value, null, nVal));
+                                        }
                                     }
                                 }
                             }
                         }
                     }
-                    }
 
                     // Do we have any mappings?
                     if (distIDSet.isEmpty())
                     {
-                        // remove any old mappings
-                        removeIndex(item.getID(), bis[i].getMapTableName());
+                        if (!addingNewItem)
+                        {
+                            // remove any old mappings
+                            List<Integer> distinctIds = dao.deleteMappingsByItemID(bis[i].getMapTableName(), item.getID());
+                            if (distinctIds != null && distinctIds.size() > 0)
+                            {
+                                dao.pruneDistinct(bis[i].getDistinctTableName(), bis[i].getMapTableName(), distinctIds);
+                            }
+                        }
                     }
                     else
                     {
                         // Update the existing mappings
-                        int[] distIDarr = new int[distIDSet.size()];
-                        int didx = 0;
-                        for (Integer distID : distIDSet)
+                        MappingResults results = dao.updateDistinctMappings(bis[i].getMapTableName(), item.getID(), distIDSet);
+                        if (results.getRemovedDistinctIds() != null && results.getRemovedDistinctIds().size() > 0)
                         {
-                            distIDarr[didx++] = distID;
+                            pruneDistinctIndex(bis[i], results.getRemovedDistinctIds());
                         }
-                        dao.updateDistinctMappings(bis[i].getMapTableName(), item.getID(), distIDarr);
                     }
                 }
             }
@@ -534,7 +522,7 @@ public class IndexBrowse
             Map<Integer, String> sortMap = new HashMap<Integer, String>();
             for (SortOption so : SortOption.getSortOptions())
             {
-                Integer key = new Integer(so.getNumber());
+                Integer key = Integer.valueOf(so.getNumber());
                 String metadata = so.getMetadata();
 
                 // If we've already used the metadata for this Item
@@ -542,7 +530,9 @@ public class IndexBrowse
                 DCValue value = null;
 
                 if (itemMDMap != null)
+                {
                     value = (DCValue) itemMDMap.get(metadata);
+                }
 
                 // We haven't used this metadata before, so grab it from the item
                 if (value == null)
@@ -563,7 +553,9 @@ public class IndexBrowse
                         value = dcv[0];
 
                         if (itemMDMap != null)
+                        {
                             itemMDMap.put(metadata, dcv[0]);
+                        }
                     }
                 }
 
@@ -583,32 +575,6 @@ public class IndexBrowse
         }
     }
     
-    /**
-     * @deprecated
-     * @param item
-     * @return
-     * @throws BrowseException
-     */
-    public boolean itemAdded(Item item)
-		throws BrowseException
-	{
-		indexItem(item);
-	    return true;
-	}
-
-    /**
-     * @deprecated
-     * @param item
-     * @return
-     * @throws BrowseException
-     */
-	public boolean itemChanged(Item item)
-		throws BrowseException
-	{
-		indexItem(item);
-	    return true;
-	}
-
 	/**
 	 * remove all the indices for the given item
 	 * 
@@ -631,17 +597,14 @@ public class IndexBrowse
 		    if (bis[i].isMetadataIndex())
 		    {
     			log.debug("Removing indexing for removed item " + itemID + ", for index: " + bis[i].getTableName());
-    			removeIndex(itemID, bis[i].getMapTableName());
+    			dao.deleteByItemID(bis[i].getMapTableName(), itemID);
 		    }
 	    }
 
         // Remove from the item indexes (archive and withdrawn)
-        removeIndex(itemID, BrowseIndex.getItemBrowseIndex().getTableName());
-        removeIndex(itemID, BrowseIndex.getWithdrawnBrowseIndex().getTableName());
+        dao.deleteByItemID(BrowseIndex.getItemBrowseIndex().getTableName(), itemID);
+        dao.deleteByItemID(BrowseIndex.getWithdrawnBrowseIndex().getTableName(), itemID);
         dao.deleteCommunityMappings(itemID);
-
-        // Ensure that we remove any invalid entries
-        pruneIndexes();
 
         return true;
 	}
@@ -655,103 +618,115 @@ public class IndexBrowse
 	public static void main(String[] argv)
 		throws SQLException, BrowseException, ParseException
 	{
-        Context context = new Context();
-        context.turnOffAuthorisationSystem();
-        IndexBrowse indexer = new IndexBrowse(context);
-	    
-	    // create an options object and populate it
-	    CommandLineParser parser = new PosixParser();
-	    Options options = new Options();
-	   
-	    // these are mutually exclusive, and represent the primary actions
-	    options.addOption("t", "tables", false, "create the tables only, do not attempt to index.  Mutually exclusive with -f and -i");
-	    options.addOption("i", "index", false, "actually do the indexing.  Mutually exclusive with -t and -f");
-	    options.addOption("f", "full", false, "make the tables, and do the indexing.  This forces -x.  Mutually exclusive with -t and -i");
-	    
-	    // these options can be specified only with the -f option
-	    options.addOption("r", "rebuild", false, "should we rebuild all the indices, which removes old index tables and creates new ones.  For use with -f. Mutually exclusive with -d");
-	    options.addOption("d", "delete", false, "delete all the indices, but don't create new ones.  For use with -f. This is mutually exclusive with -r");
-	    
-	    // these options can be specified only with the -t and -f options
-	    options.addOption("o", "out", true, "[-o <filename>] write the remove and create SQL to the given file. For use with -t and -f");  // FIXME: not currently working
-	    options.addOption("p", "print", false, "write the remove and create SQL to the stdout. For use with -t and -f");
-	    options.addOption("x", "execute", false, "execute all the remove and create SQL against the database. For use with -t and -f");
-	    options.addOption("s", "start", true, "[-s <int>] start from this index number and work upward (mostly only useful for debugging). For use with -t and -f");
-	    
-	    // this option can be used with any argument
-	    options.addOption("v", "verbose", false, "print extra information to the stdout.  If used in conjunction with -p, you cannot use the stdout to generate your database structure");
-	    
-	    // display the help.  If this is spefified, it trumps all other arguments
-	    options.addOption("h", "help", false, "show this help documentation.  Overrides all other arguments");
-	    
-	    CommandLine line = parser.parse(options, argv);
-	    
-	    // display the help
-	    if (line.hasOption("h"))
-	    {
-	    	indexer.usage(options);
-	    	return;
-	    }
-	    
-	    if (line.hasOption("v"))
-	    {
-	    	indexer.setVerbose(true);
-	    }
-	    
-	    if (line.hasOption("i"))
-	    {
-	    	indexer.createIndex();
-	    	return;
-	    }
-	    
-	    if (line.hasOption("f"))
-	    {
-	    	if (line.hasOption('r'))
-		    {
-		        indexer.setRebuild(true);
-		    }
-	    	else if (line.hasOption("d"))
-		    {
-		    	indexer.setDelete(true);
-		    }
-	    }
-	    
-	    if (line.hasOption("f") || line.hasOption("t"))
-	    {
-	    	if (line.hasOption("s"))
-		    {
-		    	indexer.setStart(Integer.parseInt(line.getOptionValue("s")));
-		    }
-	    	if (line.hasOption("x"))
-		    {
-		    	indexer.setExecute(true);
-		    }
-	    	if (line.hasOption("p"))
-	    	{
-	    		indexer.setStdOut(true);
-	    	}
-	    	if (line.hasOption("o"))
-	    	{
-	    		indexer.setFileOut(true);
-	    		indexer.setOutFile(line.getOptionValue("o"));
-	    	}
-	    }
-	    
-	    if (line.hasOption("t"))
-	    {
-	    	indexer.prepTables();
-	    	return;
-	    }
-	    
-	    if (line.hasOption("f"))
-	    {
-	    	indexer.setExecute(true);
-	    	indexer.initBrowse();
-	    	return;
-	    }
-	    
-	    indexer.usage(options);
-        context.complete();
+        Date startTime = new Date();
+        try
+        {
+            Context context = new Context();
+            context.turnOffAuthorisationSystem();
+            IndexBrowse indexer = new IndexBrowse(context);
+
+            // create an options object and populate it
+            CommandLineParser parser = new PosixParser();
+            Options options = new Options();
+
+            // these are mutually exclusive, and represent the primary actions
+            options.addOption("t", "tables", false, "create the tables only, do not attempt to index.  Mutually exclusive with -f and -i");
+            options.addOption("i", "index", false, "actually do the indexing.  Mutually exclusive with -t and -f");
+            options.addOption("f", "full", false, "make the tables, and do the indexing.  This forces -x.  Mutually exclusive with -t and -i");
+
+            // these options can be specified only with the -f option
+            options.addOption("r", "rebuild", false, "should we rebuild all the indices, which removes old index tables and creates new ones.  For use with -f. Mutually exclusive with -d");
+            options.addOption("d", "delete", false, "delete all the indices, but don't create new ones.  For use with -f. This is mutually exclusive with -r");
+
+            // these options can be specified only with the -t and -f options
+            options.addOption("o", "out", true, "[-o <filename>] write the remove and create SQL to the given file. For use with -t and -f");  // FIXME: not currently working
+            options.addOption("p", "print", false, "write the remove and create SQL to the stdout. For use with -t and -f");
+            options.addOption("x", "execute", false, "execute all the remove and create SQL against the database. For use with -t and -f");
+            options.addOption("s", "start", true, "[-s <int>] start from this index number and work upward (mostly only useful for debugging). For use with -t and -f");
+
+            // this option can be used with any argument
+            options.addOption("v", "verbose", false, "print extra information to the stdout.  If used in conjunction with -p, you cannot use the stdout to generate your database structure");
+
+            // display the help.  If this is spefified, it trumps all other arguments
+            options.addOption("h", "help", false, "show this help documentation.  Overrides all other arguments");
+
+            CommandLine line = parser.parse(options, argv);
+
+            // display the help
+            if (line.hasOption("h"))
+            {
+                indexer.usage(options);
+                return;
+            }
+
+            if (line.hasOption("v"))
+            {
+                indexer.setVerbose(true);
+            }
+
+            if (line.hasOption("i"))
+            {
+                indexer.createIndex();
+                return;
+            }
+
+            if (line.hasOption("f"))
+            {
+                if (line.hasOption('r'))
+                {
+                    indexer.setRebuild(true);
+                }
+                else if (line.hasOption("d"))
+                {
+                    indexer.setDelete(true);
+                }
+            }
+
+            if (line.hasOption("f") || line.hasOption("t"))
+            {
+                if (line.hasOption("s"))
+                {
+                    indexer.setStart(Integer.parseInt(line.getOptionValue("s")));
+                }
+                if (line.hasOption("x"))
+                {
+                    indexer.setExecute(true);
+                }
+                if (line.hasOption("p"))
+                {
+                    indexer.setStdOut(true);
+                }
+                if (line.hasOption("o"))
+                {
+                    indexer.setFileOut(true);
+                    indexer.setOutFile(line.getOptionValue("o"));
+                }
+            }
+
+            if (line.hasOption("t"))
+            {
+                indexer.prepTables();
+                return;
+            }
+
+            if (line.hasOption("f"))
+            {
+                indexer.setExecute(true);
+                indexer.initBrowse();
+                return;
+            }
+
+            indexer.usage(options);
+            context.complete();
+        }
+        finally
+        {
+            Date endTime = new Date();
+            System.out.println("Started: " + startTime.getTime());
+            System.out.println("Ended: " + endTime.getTime());
+            System.out.println("Elapsed time: " + ((endTime.getTime() - startTime.getTime()) / 1000) + " secs (" + (endTime.getTime() - startTime.getTime()) + " msecs)");
+
+        }
 	}
 
 	/**
@@ -786,7 +761,7 @@ public class IndexBrowse
                 createTables(bis[i]);
 
                 // prepare some CLI output
-                StringBuffer logMe = new StringBuffer();
+                StringBuilder logMe = new StringBuilder();
                 for (SortOption so : SortOption.getSortOptions())
                 {
                     logMe.append(" ").append(so.getMetadata()).append(" ");
@@ -837,7 +812,7 @@ public class IndexBrowse
                 String distinctComViewName = BrowseIndex.getTableName(i, true, false, false, true);
 
     			output.message("Checking for " + tableName);
-    			if (dao.testTableExistance(tableName))
+    			if (dao.testTableExistence(tableName))
     			{
                     output.message("...found");
                     
@@ -864,7 +839,7 @@ public class IndexBrowse
                 // done.  Therefore we use a blank context to make the requests,
                 // not caring if it gets aborted or not
                 output.message("Checking for " + distinctTableName);
-                if (!dao.testTableExistance(distinctTableName))
+                if (!dao.testTableExistence(distinctTableName))
     			{
                     if (i < bis.length || i < 10)
                     {
@@ -926,7 +901,7 @@ public class IndexBrowse
      */
     private void dropItemTables(BrowseIndex bix) throws BrowseException
     {
-        if (dao.testTableExistance(bix.getTableName()))
+        if (dao.testTableExistence(bix.getTableName()))
         {
             String tableName = bix.getTableName();
             String dropper = dao.dropIndexAndRelated(tableName, this.execute());
@@ -957,7 +932,7 @@ public class IndexBrowse
             List<Integer> sortCols = new ArrayList<Integer>();
             for (SortOption so : SortOption.getSortOptions())
             {
-                sortCols.add(new Integer(so.getNumber()));
+                sortCols.add(Integer.valueOf(so.getNumber()));
             }
 
             createItemTables(BrowseIndex.getItemBrowseIndex(), sortCols);
@@ -1062,12 +1037,12 @@ public class IndexBrowse
     public void initBrowse()
 		throws SQLException, BrowseException
 	{
-		Date start = new Date();
+		Date localStart = new Date();
 		
 		output.message("Creating browse indexes for DSpace");
 		
 	    Date initDate = new Date();
-	    long init = initDate.getTime() - start.getTime();
+	    long init = initDate.getTime() - localStart.getTime();
 	    
 	    output.message("init complete (" + Long.toString(init) + " ms)");
 	    
@@ -1090,7 +1065,7 @@ public class IndexBrowse
 	    }
 	    
 	    Date prepDate = new Date();
-	    long prep = prepDate.getTime() - start.getTime();
+	    long prep = prepDate.getTime() - localStart.getTime();
 	    long prepinit = prepDate.getTime() - initDate.getTime();
 	    
 	    output.message("tables prepped (" + Long.toString(prep) + " ms, " + Long.toString(prepinit) + " ms)");
@@ -1100,7 +1075,7 @@ public class IndexBrowse
 	    context.complete();
 	    
 	    Date endDate = new Date();
-	    long end = endDate.getTime() - start.getTime();
+	    long end = endDate.getTime() - localStart.getTime();
 	    long endprep = endDate.getTime() - prepDate.getTime();
 	    
 	    output.message("content indexed (" + Long.toString(end) + " ms, " + Long.toString(endprep) + " ms)");
@@ -1145,16 +1120,13 @@ public class IndexBrowse
     		
     		for (int j = 0; j < items.length; j++)
     		{
-                indexItem(new ItemMetadataProxy(items[j].getID(), items[j]));
+                // Creating the indexes from scracth, so treat each item as if it's new
+                indexItem(new ItemMetadataProxy(items[j].getID(), items[j]), true);
     			
     			// after each item we commit the context and clear the cache
     			context.commit();
     			context.clearCache();
     		}
-    		
-    		// penultimately we have to delete any items that couldn't be located in the
-    		// index list
-            pruneIndexes();
             
             // Make sure the deletes are written back
             context.commit();
@@ -1212,7 +1184,7 @@ public class IndexBrowse
 	// private inner class
 	//	 Hides the Item / BrowseItem in such a way that we can remove
 	//	 the duplication in indexing an item.
-	private class ItemMetadataProxy
+	private static class ItemMetadataProxy
 	{
 	    private Item item;
 	    private BrowseItem browseItem;
