@@ -1,39 +1,9 @@
-/*
- * MetadataAuthorityManager.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 13:02:24 -0400 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2009, The DSpace Foundation.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the DSpace Foundation nor the names of its
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.content.authority;
 
@@ -47,10 +17,7 @@ import java.util.Enumeration;
 import org.apache.log4j.Logger;
 
 import org.dspace.content.MetadataField;
-import org.dspace.content.Collection;
-import org.dspace.content.ItemIterator;
 import org.dspace.core.ConfigurationManager;
-import org.dspace.core.PluginManager;
 
 /**
  * Broker for metadata authority settings configured for each metadata field.
@@ -114,7 +81,7 @@ public class MetadataAuthorityManager
             {
                 // field is expected to be "schema.element.qualifier"
                 String field = key.substring(authPrefix.length());
-                int dot = field.indexOf(".");
+                int dot = field.indexOf('.');
                 if (dot < 0)
                 {
                     log.warn("Skipping invalid MetadataAuthority configuration property: "+key+": does not have schema.element.qualifier");
@@ -123,7 +90,7 @@ public class MetadataAuthorityManager
                 String schema = field.substring(0, dot);
                 String element = field.substring(dot+1);
                 String qualifier = null;
-                dot = element.indexOf(".");
+                dot = element.indexOf('.');
                 if (dot >= 0)
                 {
                     qualifier = element.substring(dot+1);
@@ -139,7 +106,9 @@ public class MetadataAuthorityManager
                 // get minConfidence level for this field if any
                 int mci = readConfidence("authority.minconfidence."+field);
                 if (mci >= Choices.CF_UNSET)
-                    minConfidence.put(fkey, new Integer(mci));
+                {
+                    minConfidence.put(fkey, Integer.valueOf(mci));
+                }
                 log.debug("Authority Control: For schema="+schema+", elt="+element+", qual="+qualifier+", controlled="+ctl+", required="+req);
             }
         }
@@ -147,7 +116,9 @@ public class MetadataAuthorityManager
         // get default min confidence if any:
         int dmc = readConfidence("authority.minconfidence");
         if (dmc >= Choices.CF_UNSET)
+        {
             defaultMinConfidence = dmc;
+        }
     }
 
     private int readConfidence(String key)
