@@ -1,44 +1,13 @@
-/*
- * Harvest.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 4889 $
- *
- * Date: $Date: 2010-05-05 15:07:23 -0400 (Wed, 05 May 2010) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.search;
 
+import java.io.Serializable;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.text.ParseException;
@@ -69,7 +38,7 @@ import org.dspace.eperson.Group;
  * withdrawn within a particular range of dates.
  * 
  * @author Robert Tansley
- * @version $Revision: 4889 $
+ * @version $Revision: 5844 $
  */
 public class Harvest
 {
@@ -119,7 +88,7 @@ public class Harvest
      * @throws SQLException
      * @throws ParseException If the date is not in a supported format
      */
-    public static List harvest(Context context, DSpaceObject scope,
+    public static List<HarvestedItemInfo> harvest(Context context, DSpaceObject scope,
             String startDate, String endDate, int offset, int limit,
             boolean items, boolean collections, boolean withdrawn,
             boolean nonAnon) throws SQLException, ParseException
@@ -133,10 +102,10 @@ public class Harvest
         
         
         // We are building a complex query that may contain a variable 
-        // about of input data points. To accomidate this while still 
-        // providing type safty we build a list of parameters to be 
+        // about of input data points. To accommodate this while still 
+        // providing type safety we build a list of parameters to be 
         // plugged into the query at the database level.
-        List parameters = new ArrayList();
+        List<Serializable> parameters = new ArrayList<Serializable>();
         
         if (scope != null)
         {
@@ -158,13 +127,13 @@ public class Harvest
         	{
         		query += " AND collection2item.collection_id= ? " +
         	             " AND collection2item.item_id=handle.resource_id ";
-        		parameters.add(new Integer(scope.getID()));
+        		parameters.add(Integer.valueOf(scope.getID()));
         	}
         	else if (scope.getType() == Constants.COMMUNITY)
         	{
         		query += " AND communities2item.community_id= ? " +
 						 " AND communities2item.item_id=handle.resource_id";
-        		parameters.add(new Integer(scope.getID()));
+        		parameters.add(Integer.valueOf(scope.getID()));
         	}
         }      
                 
@@ -205,7 +174,7 @@ public class Harvest
             parameters.add(toTimestamp(endDate, selfGenerated));
         }
         
-        if (withdrawn == false)
+        if (!withdrawn)
         {
             // Exclude withdrawn items
             if ("oracle".equals(ConfigurationManager.getProperty("db.name")))
@@ -229,7 +198,7 @@ public class Harvest
         // Execute
         Object[] parametersArray = parameters.toArray();
         TableRowIterator tri = DatabaseManager.query(context, query, parametersArray);
-        List infoObjects = new LinkedList();
+        List<HarvestedItemInfo> infoObjects = new LinkedList<HarvestedItemInfo>();
         int index = 0;
         int itemCounter = 0;
 
@@ -316,7 +285,9 @@ public class Harvest
         {
             // close the TableRowIterator to free up resources
             if (tri != null)
+            {
                 tri.close();
+            }
         }
 
         return infoObjects;
@@ -401,7 +372,9 @@ public class Harvest
         finally
         {
             if (colRows != null)
+            {
                 colRows.close();
+            }
         }
     }
 
