@@ -1,39 +1,9 @@
-/*
- * InitialQuestionsStep.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3738 $
- *
- * Date: $Date: 2009-04-24 00:32:12 -0400 (Fri, 24 Apr 2009) $
- *
- * Copyright (c) 2002-2009, The DSpace Foundation.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the DSpace Foundation nor the names of its
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.submit.step;
 
@@ -43,8 +13,6 @@ import java.sql.SQLException;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import org.apache.log4j.Logger;
 
 import org.dspace.app.util.SubmissionInfo;
 import org.dspace.app.util.Util;
@@ -73,7 +41,7 @@ import org.dspace.submit.AbstractProcessingStep;
  * @see org.dspace.submit.AbstractProcessingStep
  * 
  * @author Tim Donohue
- * @version $Revision: 3738 $
+ * @version $Revision: 5844 $
  */
 public class InitialQuestionsStep extends AbstractProcessingStep
 {
@@ -101,9 +69,6 @@ public class InitialQuestionsStep extends AbstractProcessingStep
     protected boolean willRemoveDate = false;
 
     protected boolean willRemoveFiles = false;
-
-    /** log4j logger */
-    private static Logger log = Logger.getLogger(InitialQuestionsStep.class);
 
     /**
      * Do any processing of the information input by the user, and/or perform
@@ -163,7 +128,7 @@ public class InitialQuestionsStep extends AbstractProcessingStep
 
             // Remember that we've removed a thesis in the session
             request.getSession().setAttribute("removed_thesis",
-                    new Boolean(true));
+                    Boolean.TRUE);
 
             return STATUS_THESIS_REJECTED; // since theses are disabled, throw
                                             // an error!
@@ -185,40 +150,40 @@ public class InitialQuestionsStep extends AbstractProcessingStep
             // Now check to see if the changes will remove any values
             // (i.e. multiple files, titles or an issue date.)
 
-            // shouldn't need to check if submission is null, but just in case!
-            if ((multipleTitles == false)
-                    && (subInfo.getSubmissionItem() != null))
+            if (subInfo.getSubmissionItem() != null)
             {
-                DCValue[] altTitles = subInfo.getSubmissionItem().getItem()
-                        .getDC("title", "alternative", Item.ANY);
-
-                willRemoveTitles = altTitles.length > 0;
-            }
-
-            if ((publishedBefore == false)
-                    && (subInfo.getSubmissionItem() != null))
-            {
-                DCValue[] citation = subInfo.getSubmissionItem().getItem()
-                        .getDC("identifier", "citation", Item.ANY);
-                DCValue[] publisher = subInfo.getSubmissionItem().getItem()
-                        .getDC("publisher", null, Item.ANY);
-
-                willRemoveDate = (citation.length > 0) || (publisher.length > 0);
-            }
-
-            if ((multipleFiles == false)
-                    && (subInfo.getSubmissionItem() != null))
-            {
-                // see if number of bitstreams in "ORIGINAL" bundle > 1
-                // FIXME: Assumes multiple bundles, clean up someday...
-                Bundle[] bundles = subInfo.getSubmissionItem().getItem()
-                        .getBundles("ORIGINAL");
-
-                if (bundles.length > 0)
+                // shouldn't need to check if submission is null, but just in case!
+                if (!multipleTitles)
                 {
-                    Bitstream[] bitstreams = bundles[0].getBitstreams();
+                    DCValue[] altTitles = subInfo.getSubmissionItem().getItem()
+                            .getDC("title", "alternative", Item.ANY);
 
-                    willRemoveFiles = bitstreams.length > 1;
+                    willRemoveTitles = altTitles.length > 0;
+                }
+
+                if (!publishedBefore)
+                {
+                    DCValue[] citation = subInfo.getSubmissionItem().getItem()
+                            .getDC("identifier", "citation", Item.ANY);
+                    DCValue[] publisher = subInfo.getSubmissionItem().getItem()
+                            .getDC("publisher", null, Item.ANY);
+
+                    willRemoveDate = (citation.length > 0) || (publisher.length > 0);
+                }
+
+                if (!multipleFiles)
+                {
+                    // see if number of bitstreams in "ORIGINAL" bundle > 1
+                    // FIXME: Assumes multiple bundles, clean up someday...
+                    Bundle[] bundles = subInfo.getSubmissionItem().getItem()
+                            .getBundles("ORIGINAL");
+
+                    if (bundles.length > 0)
+                    {
+                        Bitstream[] bitstreams = bundles[0].getBitstreams();
+
+                        willRemoveFiles = bitstreams.length > 1;
+                    }
                 }
             }
 
@@ -228,9 +193,9 @@ public class InitialQuestionsStep extends AbstractProcessingStep
             if (willRemoveTitles || willRemoveDate || willRemoveFiles)
             {
                 //save what we will need to prune to request (for UI to process)
-                request.setAttribute("will.remove.titles", new Boolean(willRemoveTitles));
-                request.setAttribute("will.remove.date", new Boolean(willRemoveDate));
-                request.setAttribute("will.remove.files", new Boolean(willRemoveFiles));
+                request.setAttribute("will.remove.titles", Boolean.valueOf(willRemoveTitles));
+                request.setAttribute("will.remove.date", Boolean.valueOf(willRemoveDate));
+                request.setAttribute("will.remove.files", Boolean.valueOf(willRemoveFiles));
                 
                 return STATUS_VERIFY_PRUNE; // we will need to do pruning!
             }
@@ -310,21 +275,18 @@ public class InitialQuestionsStep extends AbstractProcessingStep
         // get the item to prune
         Item item = subInfo.getSubmissionItem().getItem();
 
-        if (multipleTitles == false
-                && subInfo.getSubmissionItem().hasMultipleTitles())
+        if (!multipleTitles && subInfo.getSubmissionItem().hasMultipleTitles())
         {
             item.clearDC("title", "alternative", Item.ANY);
         }
 
-        if (publishedBefore == false
-                && subInfo.getSubmissionItem().isPublishedBefore())
+        if (!publishedBefore && subInfo.getSubmissionItem().isPublishedBefore())
         {
             item.clearDC("identifier", "citation", Item.ANY);
             item.clearDC("publisher", null, Item.ANY);
         }
 
-        if (multipleFiles == false
-                && subInfo.getSubmissionItem().hasMultipleFiles())
+        if (!multipleFiles && subInfo.getSubmissionItem().hasMultipleFiles())
         {
             // remove all but first bitstream from bundle[0]
             // FIXME: Assumes multiple bundles, clean up someday...
