@@ -1,41 +1,9 @@
-/*
- * GroupEditServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 13:02:24 -0400 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet.admin;
 
@@ -65,7 +33,7 @@ import org.dspace.eperson.Unit;
  * Servlet for editing groups
  * 
  * @author dstuve
- * @version $Revision: 3705 $
+ * @version $Revision: 5845 $
  */
 public class GroupEditServlet extends DSpaceServlet
 {
@@ -143,14 +111,14 @@ public class GroupEditServlet extends DSpaceServlet
                     // add all members to a set
                     for (int x = 0; x < members.length; x++)
                     {
-                        Integer epersonID = new Integer(members[x].getID());
+                        Integer epersonID = Integer.valueOf(members[x].getID());
                         memberSet.add(epersonID);
                     }
 
                     // now all eperson_ids are put in a set
                     for (int x = 0; x < eperson_ids.length; x++)
                     {
-                        epersonIDSet.add(new Integer(eperson_ids[x]));
+                        epersonIDSet.add(Integer.valueOf(eperson_ids[x]));
                     }
 
                     // process eperson_ids, adding those to group not already
@@ -173,7 +141,7 @@ public class GroupEditServlet extends DSpaceServlet
                     {
                         EPerson e = members[x];
 
-                        if (!epersonIDSet.contains(new Integer(e.getID())))
+                        if (!epersonIDSet.contains(Integer.valueOf(e.getID())))
                         {
                             group.removeMember(e);
                         }
@@ -199,14 +167,14 @@ public class GroupEditServlet extends DSpaceServlet
                     // add all members to a set
                     for (int x = 0; x < membergroups.length; x++)
                     {
-                        Integer myID = new Integer(membergroups[x].getID());
+                        Integer myID = Integer.valueOf(membergroups[x].getID());
                         memberSet.add(myID);
                     }
 
                     // now all eperson_ids are put in a set
                     for (int x = 0; x < group_ids.length; x++)
                     {
-                        groupIDSet.add(new Integer(group_ids[x]));
+                        groupIDSet.add(Integer.valueOf(group_ids[x]));
                     }
 
                     // process group_ids, adding those to group not already
@@ -230,7 +198,7 @@ public class GroupEditServlet extends DSpaceServlet
                     {
                         Group g = membergroups[x];
 
-                        if (!groupIDSet.contains(new Integer(g.getID())))
+                        if (!groupIDSet.contains(Integer.valueOf(g.getID())))
                         {
                             group.removeMember(g);
                         }
